overflow fix

--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -28,7 +28,6 @@ $inputFontSize: 20px;
     display: flex;
     align-items:center;
     flex-wrap: wrap;
-    overflow: scroll;
     .IntroText{
         width:80%;
         font-family: $subfont;
